# dependency-access-pipeline

./: .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  automaton.py  normalize.py  pyproject.toml
security/: bandit-scope.yaml  clamav-scope.yaml  fetch-scope.yaml  grype-scope.yaml  kvrt-scope.yaml  schemathesis-scope.yaml  yara-scope.yaml  zap-scope.yaml
